# efjson-rust

./: Cargo.toml  LICENSE  README.md  README.zh.md  build.rs  rustfmt.toml
benches/: stream.rs
c_src/: build.c  efjson_stream.h
efjson/: Cargo.toml
efjson/benches/: stream.rs
efjson/c_src/: build.c
efjson/examples/: derive.rs  deserialize.rs  drop.rs  event.rs  stream.rs
efjson/src/: base.rs  lib.rs  stream_parser.rs
efjson/src/deserialize/: mod.rs
efjson/src/deserialize/deserlizer/: array.rs  box_rc.rs  float.rs  json.rs  mod.rs  object.rs  stateless.rs  string.rs  tuple.rs
efjson/src/deserialize/receiver/: array.rs  mod.rs  object.rs  struct_helper.rs
efjson_derive/: Cargo.toml
efjson_derive/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
src/: base.rs  event_parser.rs  lib.rs  main.rs  stream_parser.rs
src/deserialize/: mod.rs
src/deserialize/deserlizer/: array.rs  float.rs  integer.rs  json.rs  mod.rs  object.rs  optional.rs  raw.rs  stateless.rs  string.rs  tuple.rs
src/deserialize/receiver/: array.rs  object.rs  string.rs
src/stream_parser/: char_check.rs  mod.rs
