[package]
name = "efjson"
version = "0.2.0"
description = "a streaming and event-driven JSON parser (with support for JSON5 and JSONC)"
license = "MIT"
edition = "2024"
homepage = "https://github.com/DreamPast/efjson-rust"
repository = "https://github.com/DreamPast/efjson-rust"

[dependencies]
bitflags = "2.9.1"
num-traits = "0.2.19"

[build-dependencies]
cc = "1.0"
