[package]
name = "efjson"
version = "0.2.0"
description = "a streaming and event-driven JSON parser (with support for JSON5 and JSONC)"
license = "MIT"
edition = "2024"
homepage = "https://github.com/DreamPast/efjson-rust"
repository = "https://github.com/DreamPast/efjson-rust"

[dependencies]
bitflags = "2.9.1"

[build-dependencies]
cc = "1.2.27"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
rand = { version = "0.9.1" }

[features]
default = ["deserialize"]
event = []
deserialize = []

[[example]]
name = "event"
required-features = ['event']

[[example]]
name = "deserialize"
required-features = ['deserialize']

[[bench]]
name = "stream"
harness = false
