[package]
name = "efjson"
version = "0.3.0"
description = "a streaming and event-driven JSON parser (with support for JSON5 and JSONC)"
license = "MIT"
edition = "2021"
homepage = "https://github.com/DreamPast/efjson-rust"
repository = "https://github.com/DreamPast/efjson-rust"
build = "build.rs"

[dependencies]
bitflags = "2.9.1"
efjson_derive = { path = "../efjson_derive", optional = true, version = "0.3.0"}

[build-dependencies]
cc = "1.2.27"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
rand = { version = "0.9.1" }

[features]
default = ["deserialize", "derive"]
event = []
deserialize = []
derive = ["deserialize", "dep:efjson_derive"]

[[example]]
name = "event"
required-features = ["event"]

[[example]]
name = "deserialize"
required-features = ["deserialize"]

[[example]]
name = "derive"
required-features = ["deserialize", "derive"]

[[example]]
name = "drop"
required-features = ["deserialize", "derive"]

[[bench]]
name = "stream"
harness = false
