[package]
name = "efjson_derive"
version = "0.3.0"
license = "MIT"
edition = "2021"
homepage = "https://github.com/DreamPast/efjson-rust"
repository = "https://github.com/DreamPast/efjson-rust"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["derive"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
